# project-dash

./: CHANGELOG.md  Cargo.toml  install.sh
.github/workflows/: build.yml
src/: app.rs  github.rs  main.rs  repo.rs  ui.rs
