[package]
name = "project-dash"
version = "0.1.0"
edition = "2021"

[dependencies]
ratatui = "0.30.0"
crossterm = "0.29.0"
color-eyre = "0.6.3"
git2 = { version = "0.20", features = ["vendored-libgit2", "vendored-openssl"] }
octocrab = "0.41"
tokio = { version = "1", features = ["full"] }
clap = { version = "4", features = ["derive", "env"] }
open = "5.3.3"
